compiler-core/src/go/tests/snapshots/gleam_core__go__tests__todo__plain_todo.snap
---
source: compiler-core/src/go/tests/todo.rs
expression: "\npub fn go() -> Int {\n  todo\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  todo
}


----- COMPILED GO
package thepackage

func Go() int64 {
  return (func() int64 { panic("`todo` expression evaluated at my/mod:3") }())
}
