compiler-core/src/go/tests/snapshots/gleam_core__go__tests__todo__todo_with_message.snap
---
source: compiler-core/src/go/tests/todo.rs
expression: "\npub fn go() -> Int {\n  todo as \"implement me\"\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  todo as "implement me"
}


----- COMPILED GO
package thepackage

func Go() int64 {
  return (func() int64 { panic("implement me") }())
}
